# google-scholar-labs-cli

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-browser-profile-auth.md
src/scholar_labs/cli/: main.py
src/scholar_labs/core/: auth.py  browser_auth.py  browser_page.py  client.py  login.py  parser.py  protocol.py  selectors.py  xsrf.py
src/scholar_labs/services/: search.py
tests/: test_auth.py  test_auth_config.py  test_browser_auth.py  test_cli.py  test_client.py  test_login.py  test_parser.py  test_protocol.py
tests/fixtures/: protocol_samples.py
