[project]
name = "scholar-labs-cli"
version = "0.1.0"
description = "CLI tool for Google Scholar Labs — search academic papers from your terminal"
readme = "README.md"
authors = [
    { name = "Wade Huang", email = "fastwade11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "httpx[http2]>=0.28",
    "beautifulsoup4>=4.12",
]

[project.scripts]
sls = "scholar_labs.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_labs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-httpx>=0.36.2",
]
