[project]
name = "scholar-labs-cli"
version = "0.2.0"
description = "CLI tool for Google Scholar Labs — search academic papers from your terminal"
readme = "README.md"
authors = [
    { name = "Wade Huang", email = "fastwade11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "httpx[http2]>=0.28",
    "beautifulsoup4>=4.12",
    "browser-cookie3>=0.20.1",
]

[project.urls]
Homepage = "https://github.com/Wade11s/google-scholar-labs-cli"
Repository = "https://github.com/Wade11s/google-scholar-labs-cli"

[project.scripts]
sls = "scholar_labs.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_labs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.36.2",
]
